--- a/styles/tmall.css
+++ b/styles/tmall.css
@@ -13,24 +13,25 @@ a{
     width: 7.5rem;
     height: 0.88rem;
     background-color: red ;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .header-top-icon{
-    float: left;
+
     width: 0.4rem; height: 0.4rem;
-    margin-top: 0.20rem;
-    margin-left: 0.28rem;
+    margin-left: -0.6rem;
+
 }
 .header-top-logo{
-    float: left;
-    margin-top: 0.25rem;
-    margin-left: 1.8rem;
+
     width: 2.37rem;height: 0.41rem;
 }
 .header-top-login{
-    float: right;
+
     font-size:0.3rem;
     line-height: 0.88rem;
-    margin-right: 0.28rem;
+    margin-right: -0.6rem;
     color: white;
 }
 .header-search{
@@ -48,6 +49,7 @@ a{
     justify-content: flex-start;
 }
 .header-search-container img{
+    margin-left: 0.03rem;
     float: left;
     width: 0.45rem;height: 0.5rem;
 }
@@ -84,10 +86,59 @@ a{
     width: 7.5rem;height: 2.645rem;
     display: flex;
     justify-content: space-around;
+    position: relative;
+    overflow: hidden;
 }
 .banner img{
-
+    position: absolute;
     width: 7.02rem;height: 2.645rem;
+}
+.banner img:nth-child(1){
+    z-index: 3;
+}
+.banner img:nth-child(2){
+    z-index: 2;
+}
+.banner img:nth-child(3){
+    z-index: 1;
+}
+.btns{
+    width: 1.5rem;height: 0.05rem;
+    position: absolute;
+    left: 3.06rem;
+    bottom: 0.16rem;
+    display: flex;
+    z-index: 4;
+    justify-content: space-between;
+}
+.btn{
+    width: 0.4rem;height: 0.05rem;
+    background: rgba(255,255,255,.5);
+}
+.btn:nth-child(1){
+    background: white;
+}
+@keyframes banner-img-in {
+    0% {
+        left: 7.5rem;
+    }
+    50% {
+        left: 3.63rem;
+    }
+    100% {
+        left: 0.24rem;
+    }
+}
+@keyframes banner-img-out {
+    0% {
+        left: 0.24rem;
+    }
+    50% {
+        left: -3.63rem;
+    }
+    100% {
+        left: -7.26rem;
+    }
 }
 .shadow{
     width: 7.5rem;height: 0.29rem;
@@ -109,10 +160,9 @@ a{
 }
 .leibie-box{
     width: 3.45rem;height: 2.57rem;
-    background: palegoldenrod;
 }
 .leibie-box:nth-child(1){
-    background: url("../images/bg1.png") no-repeat center center /100% auto;
+    background: url("../images/bg1.png") no-repeat top right /100% auto;
 }
 .leibie-box:nth-child(2){
     background: url("../images/bg2.png") no-repeat center center /100% auto;
@@ -123,13 +173,21 @@ a{
 .leibie-box:nth-child(4){
     background: url("../images/bg4.png") no-repeat center center /100% auto;
 }
+
 .leibie-box-tittle{
-    width: 1.28rem;height: 0.32rem;
+    width: 3.45rem;height: 0.32rem;
     line-height: 0.32rem;
     font-size: 0.32rem;
     margin-top: 0.3rem;
-    margin-left: 0.3rem;
     font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap:  wrap;
+}
+.add{
+
+    width: 1.02rem;height: 0.32rem;
+
 }
 .leibie-box-img{
     width: 1.55rem;height: 1.55rem;
@@ -137,16 +195,139 @@ a{
 }
 .bangdan{
     width: 7.5rem;height: 9.36rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+
 }
 .bangdan-tittle{
     width: 7.02rem;height:0.6rem;
     font-size: 0.36rem;
     line-height: 0.36rem;
     font-weight: bold;
-    margin-left: 0.24rem;
 }
 .bangdan_one{
     width: 7.02rem;height:2.99rem;
-    margin-left: 0.24rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+.di{
+    width: 2.26rem;height:2.73rem ;
+    background: url("../images/低.jpg") no-repeat center /100% auto;
+}
+.gao{
+    width: 2.26rem;height:2.99rem ;
+    background: url("../images/高.jpg") no-repeat center /100% auto;
+}
+.bangdan_two{
+    width: 7.02rem;height:1.69rem;
+    background: rgb(248,248,248);
+    display: flex;
+    justify-content: space-around;
+}
+.bangdan_two-left{
+    width: 1.92rem;height:1.69rem;
+    background:url("../images/bangdan_two-left.jpg") no-repeat center /100% auto;
+}
+.bangdan_two-right{
+    width: 4rem;height:1.69rem;
+    position: relative;
+    overflow: hidden;
+    background:url("../images/bangdan_two-right1.jpg") no-repeat center /100% auto;
+}
+.bangdan_two-right-img:nth-child(1){
+    width: 4rem;height:1.69rem;
+    position: absolute;
+    background:url("../images/bangdan_two-right1.jpg") no-repeat center /100% auto;
+    transition: all 2s linear 0s;
+    z-index: 2;
+}
+.bangdan_two-right-img:nth-child(2){
+    width: 4rem;height:1.69rem;
+    position: absolute;
+    z-index: 1;
+    background:url("../images/bangdan_two-right2.jpg") no-repeat center /100% auto;
 }
 
+.bangdan_three{
+    width:3.45rem;height:1.69rem;
+    background: rgb(248,248,248);
+    font-size: 0.24rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.bangdan_three-left{
+    width:1.5266rem;height:1.35rem;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: column;
+}
+.hengxian{
+    width: 0.22rem;height: 0.3rem;
+    line-height: 0.3rem;
+    color: darkgray;
+}
+.bangdan_three-left-tittle{
+    color: #c89d6b;
+}
+.bangdan_three-left-des{
+    color: darkgray;
+}
+.bangdan_three-right{
+    width:1.1rem;height:1.1rem;
+    background: url("../images/衣服女.webp") no-repeat center /100% auto;
+}
+.cainixihuan{
+    width: 7.5rem;height: 0.6rem;
+    display: flex;
+    justify-content: space-around;
+
+}
+.cainixihuan-tittle{
+    width: 7.02rem;height: 0.6rem;
+    font-size: 0.36rem;
+    font-weight: bold;
+}
+.xihuan-container{
+    width: 7.5rem;height: 5.54rem;
+    display: flex;
+    justify-content: space-around;
+}
+.xihuan{
+    width: 3.4rem;height: 5.34rem;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    border: 1px solid #dddddd
+}
+.xihuan-img{
+    width: 3.36rem;height: 3.58rem;
+    background: url("../images/第七公社.jpg") no-repeat center /100% auto;
+}
+.xihuan-name{
+    width: 2.96rem;height: 0.72rem;
+    font-size: 0.28rem;
+}
+.kong{
+    width: 2.96rem;height: 0.28rem;
+}
+.price{
+    width: 3.4rem;height: 0.6rem;
+    display: flex;
+    justify-content: space-between;
+}
+.price-left{
+    color: red;
+    font-size: 0.32rem;
+
+}
+.price-right{
+    color: red;
+    width: 1.08rem;height: 0.46rem;
+    font-size: 0.24rem;
+    text-align: center;
+    background: #ffe6eb;
+    border-radius: 35%;
+}
